create main qr_component

--- a/challenges/qr_code_component/index.html
+++ b/challenges/qr_code_component/index.html
@@ -27,11 +27,41 @@
     />
     <link rel="manifest" href="../site.webmanifest" />
     <link rel="stylesheet" href="style.css" />
+
+    <!-- START: Mathus::Google Font Imports -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- END: Mathus::Google Font Imports -->
   </head>
-  <body class="m-0">
+  <body class="bg-light-gray m-0">
     <div
       class="flex h-[100vh] w-full flex-col place-content-center text-center"
     >
+      <!-- START: Mathus::Main Challenge Code -->
+      <div class="antialiased container mx-auto max-w-sm p-8">
+        <div class="justify-between items-center bg-white rounded-xl">
+          <div class="relative p-4">
+            <img src="./images/image-qr-code.png" class="rounded-lg" />
+          </div>
+          <div class="p-4">
+            <p class="text-dark-blue font-serif font-bold text-2xl">
+              Improve your front-end skills by building projects
+            </p>
+          </div>
+          <div class="px-8 pb-8">
+            <p class="text-grayish-blue font-serif font-normal text-base">
+              Scan the QR code to visit Frontend Mentor and take your coding
+              skills to the next level
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- END: Mathus::Main Challenge Code -->
+
       <div>
         <a
           class="text-optimum-blue hover:text-optimum-darkblue"
@@ -54,9 +84,10 @@
       <div class="mt-3">
         <a
           class="text-optimum-blue hover:text-optimum-darkblue"
-          href="https://github.com/optimumBA/frontend_mentor_challenges/tree/qr_code_component/challenges/qr_code_component"
+          href="https://github.com/ZeonmkII/frontend_mentor_challenges/tree/qr_code_component/challenges/qr_code_component"
           >Source code</a
         >
+        :: by Mathus Tuachob
       </div>
     </div>
   </body>
